--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,8 @@ version: '3'
 
 services:
   db:
-    image: mysql:5.7.22
+    platform: linux/x86_64
+    image: mysql:8.0
     environment:
       MYSQL_ALLOW_EMPTY_PASSWORD: "yes"
     ports:
@@ -14,15 +15,23 @@ services:
     build:
       context: .
       dockerfile: Dockerfile
+      cache_from:
+        - matsuhub-backend-image-cache
+      args:
+        ARG_RUBY_VERSION: ${ARG_RUBY_VERSION:-3.1.2}
+    image: matsuhub-backend-image:0.0.1
+    environment:
+      - EDITOR=vim
     command: bash -c "rm -f tmp/pids/server.pid && bundle exec rails s -p 8080 -b '0.0.0.0'"
     volumes:
-      - ./:/matsuhub-back
+      - ./:/matsuhub-backend
       - bundle:/bundle
     ports:
       - "8080:8080"
     links:
       - db
-    env_file: ./.env.development
+    depends_on:
+      - db
     tty: true
     stdin_open: true
 volumes:
