ステージング環境が動くように

--- a/Dockerfile-staging
+++ b/Dockerfile-staging
@@ -1,4 +1,4 @@
-FROM ruby:3.1.2-alpine3.16
+FROM ruby:2.7.3-alpine3.13
 
 ENV LANG C.UTF-8
 RUN apk upgrade && \
@@ -52,10 +52,21 @@ RUN gem update
 RUN bundle install
 
 ADD . $APP_HOME
-RUN echo $RAILS_CONFIG_MASTER_KEY > config/master.key
-RUN echo $RAILS_CONFIG_CREDENTIALS_YML_ENC > config/credentials.yml.enc
+ENV RAILS_ENV=staging
+ENV RDS_DB_NAME=$RDS_DB_NAME
+ENV RDS_PASSWORD=$RDS_PASSWORD
+ENV RDS_HOSTNAME=$RDS_HOSTNAME
+ENV RDS_PASSWORD=$RDS_PASSWORD
+ENV RDS_PORT=$RDS_PORT
+ENV S3_AWS_ACCESS_KEY_ID=$S3_AWS_ACCESS_KEY_ID
+ENV S3_AWS_SECRET_ACCESS_KEY=$S3_AWS_SECRET_ACCESS_KEY
+ENV API_DOMAIN=$API_DOMAIN
+ENV API_HOST=$API_HOST
+ENV MAILER_SENDER=$MAILER_SENDER
+ENV SES_ACCESS_KEY_ID=$SES_ACCESS_KEY_ID
+ENV SES_SECRET_ACCESS_KEY=$SES_SECRET_ACCESS_KEY
 
-ENV MATSUHUB_TEST=$MATSUHUB_TEST
+COPY ./services.sh /matsuhub-backend/scripts/
+RUN chmod +x /matsuhub-backend/scripts/services.sh
 
-EXPOSE 8080
-CMD bundle exec rails s -p 8080 -b '0.0.0.0'
+CMD ["/matsuhub-backend/scripts/services.sh"]
