--- a/buildspec.yml
+++ b/buildspec.yml
@@ -1,6 +1,11 @@
 ---
 version: 0.2
- 
+
+env:
+  parameter-store:
+    DOCKERHUB_USER: 'DOCKERHUB_USER'
+    DOCKERHUB_PASS: 'DOCKERHUB_PASS'
+
 phases:
   install:
     runtime-versions:
@@ -8,12 +13,14 @@ phases:
   pre_build:
     commands:
       - IMAGE_URI=$AWS_ACCOUNT_ID.dkr.ecr.$AWS_DEFAULT_REGION.amazonaws.com/$IMAGE_REPO_NAME
-      - $(aws ecr get-login --no-include-email --region $AWS_DEFAULT_REGION)
+      - aws ecr get-login-password --region ${AWS_DEFAULT_REGION} | docker login --username AWS --password-stdin ${IMAGE_URI}
+      - echo Logging in to Docker Hub...
+      - echo ${DOCKERHUB_PASS} | docker login -u ${DOCKERHUB_USER} --password-stdin
   build:
     commands:
       - echo Build started on `date`
       - echo Building the Docker image...   
-      - docker build -t $IMAGE_REPO_NAME:$IMAGE_TAG -f ./Dockerfile-ecs .
+      - docker build -t $IMAGE_REPO_NAME:$IMAGE_TAG -f ./Dockerfile-staging .
       - docker tag $IMAGE_REPO_NAME:$IMAGE_TAG $AWS_ACCOUNT_ID.dkr.ecr.$AWS_DEFAULT_REGION.amazonaws.com/$IMAGE_REPO_NAME:$IMAGE_TAG      
   post_build:
     commands:
